Add voting feature (user)

--- a/src/app/home/password-entry-dialog/password-entry-dialog.component.html
+++ b/src/app/home/password-entry-dialog/password-entry-dialog.component.html
@@ -47,7 +47,7 @@
         </div>
 
         <div *ngIf="isSuccess && !isLoading">
-            Successfully set up blockchain account!
+            You have successfully submit your vote!
             <button (click)="onCancelClicked(true)" class="full-width-input setup btn btn-primary">
                 <span class="text-color-login-form">CLOSE</span>
             </button>
