--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -57,7 +57,7 @@ body {
 
 .page-content {
     padding: 40px;
-    min-height: 100vh;
+    min-height: calc(100vh - 65px);
     transition: all 0.3s;
     position: absolute;
     top: 65px;
