update Vote-result page and "minor" update AS

--- a/src/app/home/password-entry-dialog/password-entry-dialog.component.html
+++ b/src/app/home/password-entry-dialog/password-entry-dialog.component.html
@@ -19,7 +19,7 @@
 
         <div class="sign-up-text">
             <div>
-                <label class="session-text" >
+                <label class="session-text">
                     You cannot change your selection once submitted. Do you want to continue?
                 </label>
             </div>
@@ -49,7 +49,7 @@
         <div *ngIf="isSuccess && !isLoading">
             You have successfully submit your vote!
             <button (click)="onCancelClicked(true)" class="full-width-input setup btn btn-primary">
-                <span class="text-color-login-form">CLOSE</span>
+                <span class="text-color-login-form">OK</span>
             </button>
         </div>
     </div>
