--- a/src/app/home/user-profile/user-profile.component.html
+++ b/src/app/home/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row">
         <!-- Avatar -->
-        <div class="col-2 px-0 avatar">
+        <div class="col-2 col-sm-4 col-xs-6 px-0 avatar">
             <img src="{{userProfile['picture']}}" alt="Avatar" class="img-res rounded-circle">
         </div>
         <!-- Avatar -->
