--- a/src/app/home/voting/voting.component.scss
+++ b/src/app/home/voting/voting.component.scss
@@ -64,7 +64,7 @@
             width: 100%;
             height: 100%;
             /* transparent black */
-            background: $secondary-color;
+            background: $brand-primary;
             /* middle layer, i.e. appears below the sidebar */
             z-index: 1;
             opacity: 0.5;
@@ -138,5 +138,11 @@
     padding: 0!important;
 }
 
+/deep/ .mat-stroked-button:not([disabled]) {
+    border-color: #fff;
+}
 
+.btn-vote {
+    width: 100px
+}
 
